tests/negative/test_decl_name_taken.orb
fnc main() {
    let i32 x;
    let ptr x = null;
}